# video_processing

./: CMakeLists.txt  README.md
sources/: coder.cpp  coder.h  h264_decoder.cpp  h264_decoder.h  jpeg_encoder.cpp  jpeg_encoder.h  main.cpp  video_processing_error.h  video_processing_utils.cpp  video_processing_utils.h
